--- a/index.html
+++ b/index.html
@@ -5,10 +5,178 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>BestShop</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<header>
+    <nav>
+        <span>BestShop</span>
+        <ul>
+            <li><a href="#">Why us</a></li>
+            <li><a href="#">Benefits</a></li>
+            <li><a href="#">Prices</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="header_content">
+        <div class="container">
+            <h1>Sell More!</h1>
+            <p>Open shop on our platform and increase your sales</p>
+            <button>Open your shop</button>
+        </div>
+    </div>
+</header>
+<section class="sales_platform">
+    <h2>The most popular sales platform in the country</h2>
+    <div class="container">
+        <div class="item">
+            <div class="circle circle-one">
+            </div>
+            <p>100000+</p>
+            <span class="text-under-item text-under-item-one">daily entries</span>
+        </div>
 
+        <div class="item">
+            <div class="circle circle-two">
+            </div>
+            <p>2000000+</p>
+            <span class="text-under-item text-under-item-two">seen products every day</span>
+        </div>
+
+        <div class="item">
+            <div class="circle circle-three">
+            </div>
+            <p>10000+</p>
+            <span class="text-under-item text-under-item-three">added posts daily</span>
+        </div>
+
+    </div>
+</section>
+<section class="small-banners">
+    <div class="container">
+        <div class="always-first">
+            <div class="always-first-text">
+                <h2>Be always first</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="always-first-image">
+                <img src="assets/Macbook.png" alt="macbook">
+            </div>
+        </div>
+
+        <div class="your-shop">
+            <div class="your-shop-image">
+                <img src="assets/iPhone.png" alt="iphone">
+            </div>
+            <div class="your-shop-text">
+                <h2>Your shop is where you are!</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+        </div>
+
+        <div class="recognition">
+            <div class="recognition-text">
+                <h2>Increase recognition of your brand!</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+
+            <div class="recognition-image">
+                <img src="assets/Trumpet.png" alt="trumpet">
+            </div>
+        </div>
+
+    </div>
+</section>
+<section class="pricing">
+    <h2>Pricing</h2>
+    <div class="pricing-offers">
+        <div class="pricing-basic">
+            <h3>Basic</h3>
+            <p>$0</p>
+            <ul>
+                <li>100 MB HDD</li>
+                <li>1 Subdomain</li>
+                <li>2 E-mails</li>
+                <li>License</li>
+                <li>Full support</li>
+            </ul>
+            <button>Begin</button>
+        </div>
+
+        <div class="pricing-professional">
+            <h3>Professional</h3>
+            <p>$25</p>
+            <p>Limited offer</p>
+            <ul>
+                <li>500 MB HDD</li>
+                <li>2 Subdomains</li>
+                <li>5 E-mails</li>
+                <li>1 Year License</li>
+                <li>Full support</li>
+            </ul>
+            <button>Begin</button>
+        </div>
+        <div class="pricing-premium">
+            <h3>Premium</h3>
+            <p>$60</p>
+            <p>Limited offer</p>
+            <ul>
+                <li>2 GB HDD</li>
+                <li>5 Subdomains</li>
+                <li>20 E-mails</li>
+                <li>2 Years License</li>
+                <li>Full support</li>
+            </ul>
+            <button>Begin</button>
+        </div>
+    </div>
+
+</section>
+<section class="questions">
+    <div class="container">
+        <div class="questions-text">
+            <p>Any questions?</p>
+            <p>Leave your email address or call us!</p>
+            <div class="questions-text-contact">
+                <img src="assets/Mail%20Icon.svg" alt ="mail-icon">
+                <p>info@bestshop.xyz</p>
+                <img src="assets/Phone%20Icon.svg" alt ="phone-icon">
+                <p>123 456 789</p>
+            </div>
+        </div>
+        <form>
+            <label>Name</label>
+            <input type="text" title="name">
+            <label>Email</label>
+            <input type="email" title="Email">
+            <div class="checkbox">
+                <input type="checkbox" title="checkbox">
+                <p>I hereby give consent for my personal data included in my application to be processed for the
+                    purposes of the recruitment process under
+                    the European Parliament’s and Council of the European Union Regulation on the Protection of Natural
+                    Persons as of 27 April 2016,
+                    with regard to the processing of personal data and on the free movement of such data, and repealing
+                    Directive 95/46/EC (Data Protection Directive)</p>
+            </div>
+            <button>Send</button>
+        </form>
+    </div>
+</section>
+
+<footer>
+    <div class="footer-text">
+        <p>BestShop</p>
+        <p>© 2019 BestShop LTD, All Rights Reserved</p>
+    </div>
+    <div class="footer-icons">
+        <img src="assets/Twitter.svg" alt="twitter-logo">
+        <img src="assets/Facebook.svg" alt="facebook-logo">
+    </div>
+</footer>
 </body>
 </html>
