--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>BestShop</title>
     <link rel="stylesheet" href="app/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <script src="webpack.config.js"></script>
 </head>
 <body>
